1998-09-09  Jim Kingdon

	* find_names.c (find_dirs): Make sure to zero errno before
	going around the loop again.
	* find_names.c (find_rcs): Make sure to set save_errno.
	(thanks to Alexandre Parenteau for reporting both problems).

1998-09-09  Jim Kingdon  <kingdon@harvey.cyclic.com> and Michael Pakovic

	* edit.c (notify_do): Only free line if it is not NULL.

1998-09-07  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* cvs.h: dirs_sent_to_server should not be inside
	AUTH_SERVER_SUPPORT (reported by both Richard Levitte and Murray
	Bishop, thanks).

	* lock.c, cvs.h: New variable lock_dir.
	* parseinfo.c (parse_config): New option LockDir.
	* lock.c (lock_name): New function, abstracts out lock file naming
	and also supports LockDir.
	* lock.c (lock_simple_remove, Reader_Lock, write_lock, set_lock):
	Call it (6 places, to create/remove read/write/master locks).
	(Lock_Cleanup): Refuse to reenter this function.
	* sanity.sh (lockfiles): New test, tests for this feature.

1998-09-03  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (multiroot): Expect ${TESTDIR} in output instead of
	assuming it is /tmp/cvs-sanity (thanks to Mark D. Baushke of Cisco).
	Clean up working directory when done (fixes apparent thinko).

	* server.c (create_adm_p): Fix one "return" which didn't return a
	value.
	(dirswitch): Check for errors from create_adm_p.

	* sanity.sh: Set LC_ALL rather than just LC_COLLATE.

Wed Sep  2 02:30:22 1998  Jim Kingdon  <kingdon@pennington.cyclic.com>

	* version.c: Bump version number to 1.10.1.1.

	* Version 1.10.1.

1998-09-01  Jim Kingdon  <kingdon@harvey.cyclic.com>

	Administrative note regarding Noel's changes to allow one to
	switch from one CVS root to another in a single command: The
	ChangeLog entries for the changes which Noel just checked in
	appear for 1998-09-01, 1998-08-28, 1998-08-25, 1998-08-19, and
	1998-08-18, rather than being all together.

	* main.c (set_root_directory): Fix whitespace.